--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "express",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
+    "ethers": "^6.16.0",
     "express": "5.1.0"
   },
   "devDependencies": {
-    "@types/node": "20.11.17",
     "@types/express": "5.0.0",
+    "@types/node": "20.11.17",
     "typescript": "5.8.3"
   }
 }
